fix:"z-index"

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,7 +49,7 @@
       background-image: url("../images/pattern-hills.svg");
       background-size: cover;
       background-position: bottom;
-      z-index: 21;
+      z-index: 99;
       bottom: 0;
       left: 0;
       right: 0;
